src/tests/InvalidTests/TestMoveInvalid1.agl
print "Press any mouse button to quit";
pos : Point = wait mouse click; # instantiate a Point and waits for a mouse click

move pos to (0,0); # move the point to the origin
